--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,62 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* in globals.css or equivilent global stylesheet within your app  */
+.navbar-nav .nav-link {
+  color: #345CFB !important;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.navbar-light .navbar-nav .nav-link:focus,
+.navbar-light .navbar-nav .nav-link:hover {
+  color: #292f76 !important;
+}
+
+.navbar-light .navbar-nav .active>.nav-link,
+.navbar-light .navbar-nav .nav-link.active,
+.navbar-light .navbar-nav .nav-link.show,
+.navbar-light .navbar-nav .show>.nav-link {
+  color: black !important;
+}
+
+.navbar-toggler:focus {
+  color: transparent;
+}
+
+.card {
+  transition: transform 0.3s ease-in-out;
+  /* Add any other styles you want to apply on hover */
+}
+
+.card:hover {
+  transform: scale(1.05);
+  /* Example: Increase size on hover */
+  /* Add any other styles you want to apply on hover */
+}
+
+.sample-slider {
+  width: 70%;
+}
+
+.sample-slider img {
+  width: 100%;
+}
+
+.sample-slider .swiper-wrapper {
+  transition-timing-function: linear;
+}
+
+@media (max-width: 991.98px) {
+
+  /* Add your styles for the collapsed Navbar here */
+  /* For example, you can change the background color or adjust padding */
+  .nav-link {
+    margin-top: 1rem;
+  }
+
+  .test {
+    display: flex;
+    flex-direction: row !important;
+    gap: 3rem !important;
+  }
+
+  .carousels {
+    height: 320px !important;
+  }
 }
