product page navbar and some navigation is set

--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,18 @@
   transition-timing-function: linear;
 }
 
+/* Hide scrollbar for Webkit browsers (Chrome, Safari, etc.) */
+.no-scrollbar::-webkit-scrollbar {
+  display: none !important;
+}
+
+/* Hide scrollbar for IE, Edge, and Firefox */
+.no-scrollbar {
+  scrollbar-width: none !important;  /* Firefox */
+  -ms-overflow-style: none !important;  /* IE and Edge */
+}
+
+
 @media (max-width: 991.98px) {
 
   /* Add your styles for the collapsed Navbar here */
