--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,6 @@
   color: #345CFB !important;
 }
 
-.navbar-light .navbar-nav .nav-link:focus,
 .navbar-light .navbar-nav .nav-link:hover {
   color: #292f76 !important;
 }
@@ -49,8 +48,10 @@
 
 /* Hide scrollbar for IE, Edge, and Firefox */
 .no-scrollbar {
-  scrollbar-width: none !important;  /* Firefox */
-  -ms-overflow-style: none !important;  /* IE and Edge */
+  scrollbar-width: none !important;
+  /* Firefox */
+  -ms-overflow-style: none !important;
+  /* IE and Edge */
 }
 
 
