--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 }
 
 .navbar-light .navbar-nav .nav-link:hover {
-  color: #292f76 !important;
+  color: #042BC8 !important;
 }
 
 .navbar-light .navbar-nav .active>.nav-link,
